@@ -31,7 +31,6 @@ void PostgresqlPreparedStatement_setInt(T P, int parameterIndex, int x);
 void PostgresqlPreparedStatement_setLong(T P, int parameterIndex, long x);
 void PostgresqlPreparedStatement_setLLong(T P, int parameterIndex, long long int x);
 void PostgresqlPreparedStatement_setDouble(T P, int parameterIndex, double x);
-void PostgresqlPreparedStatement_setTimestamp(T P, int parameterIndex, long x);
 void PostgresqlPreparedStatement_setBlob(T P, int parameterIndex, const void *x, int size);
 void PostgresqlPreparedStatement_execute(T P);
 ResultSet_T PostgresqlPreparedStatement_executeQuery(T P);
